<resources>
    <string name="app_name">TON Wallet</string>

    <string name="accessibility_back">Back</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_scan">Scan QR code</string>
    <string name="accessibility_settings">Settings</string>

    <string name="active_address">Active address</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="amount">Amount</string>
    <string name="biometric_auth">Biometric Auth</string>
    <string name="biometric_enroll_message">Your device supports biometric authentication but no\u00A0method is\u00A0set yet. To\u00A0continue, open the system\u00A0settings and add an\u00A0authentication method.</string>
    <string name="biometric_prompt_title">Biometric auth</string>
    <string name="biometric_prompt_activate_description">Pass biometric authentication to\u00A0activate it in\u00A0the TonWallet application</string>
    <string name="biometric_prompt_default_description">Scan your fingerprint</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="change_passcode">Change passcode</string>
    <string name="characters_exceeded">Message size has been exceeded by %1$d characters.</string>
    <string name="characters_left">%1$d characters left.</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="comment_visible_to_everyone">The comment is visible to\u00A0everyone. You must include the\u00A0note when sending to an\u00A0exchange.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_and_send">Confirm and send</string>
    <string name="confirm_passcode">Confirm a Passcode</string>
    <string name="congratulations">Congratulations</string>
    <string name="congratulations_subtitle">Your TON Wallet has\u00A0just been\u00A0created.\nOnly you control\u00A0it.\n\nTo be\u00A0able to\u00A0always have access to\u00A0it, please write down secret words and\u00A0set up a\u00A0secure passcode.</string>
    <string name="continue_text">Continue</string>
    <string name="create_new_empty_wallet">Create a new empty wallet instead</string>
    <string name="create_wallet">Create my wallet</string>
    <string name="date_at_time">%1$s at %2$s</string>
    <string name="decreased_amount">Amount decreased by the commission value</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="delete_wallet_alert_title">Are you sure?</string>
    <string name="delete_wallet_alert_description">After wallet delete you can restore access to it only with recovery phrase</string>
    <string name="description_of_payment">Description of the payment</string>
    <string name="done">Done</string>
    <string name="done_exclamation">Done!</string>
    <string name="dont_have_phrase">I don\'t have those</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="enable_biometrics">Enable Biometric Auth</string>
    <string name="enter_passcode_digits">Enter the %1$d digits in the passcode.</string>
    <string name="enter_secret_words">Enter 24 secret words</string>
    <string name="enter_wallet_address">Enter Wallet Address or Domain…</string>
    <string name="error">Error</string>
    <string name="fee">Fee</string>
    <string name="fee_changed">Fee changed</string>
    <string name="fee_changed_check">Check if new fee is suitable for you</string>
    <string name="fee_storage">-%1$s storage fee</string>
    <string name="fee_transaction">%1$s transaction fee</string>
    <string name="fiat_aed">United Arab Emirates Dirham</string>
    <string name="fiat_chf">Swiss Franc</string>
    <string name="fiat_cny">China Yuan</string>
    <string name="fiat_eur">Euro</string>
    <string name="fiat_gbp">Great Britain Pound</string>
    <string name="fiat_idr">Indonesian Rupiah</string>
    <string name="fiat_inr">Indian Rupee</string>
    <string name="fiat_jpy">Japanese Yen</string>
    <string name="fiat_krw">South Korean Won</string>
    <string name="fiat_rub">Russian Ruble</string>
    <string name="fiat_usd">United States Dollar</string>
    <string name="from">from</string>
    <string name="general">General</string>
    <string name="import_wallet">Import existing wallet</string>
    <string name="incorrect_secret_words">Sorry, you have entered incorrect secret words. Please double check and try again.</string>
    <string name="incorrect_words">Incorrect words</string>
    <string name="incorrect_words_description">The secret words you have entered do not match the\u00A0ones in\u00A0the list.</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_address_description">Address entered does not belong to TON</string>
    <string name="lets_check_recovery_phrase">Let\'s check that you wrote them\u00A0down correctly. Please enter the\u00A0words %1$d, %2$d and %3$d.</string>
    <string name="network_error">Network error occurred. Check your connection and retry.</string>
    <string name="no_camera_access">No Camera Access</string>
    <string name="no_camera_access_description">TON Wallet doesn\'t have access to the\u00A0camera. Please enable camera access to\u00A0scan QR codes.</string>
    <string name="no_qr_codes_detected">No QR codes detected</string>
    <string name="not_enough_funds">You don\'t have enough funds to perform this send. Try decrease amount or make message shorter.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_permission_description">Please enable access for receiving notifications</string>
    <string name="notification_ton_connect_title">Ton Connect request</string>
    <string name="notification_ton_connect_description">Tap notification to approve or cancel request</string>
    <string name="ok">OK</string>
    <string name="ok_sorry">OK, sorry</string>
    <string name="open_settings">Open Settings</string>
    <string name="passcode_changed">Passcode successfully changed</string>
    <string name="passcode_for_digit">4-digit code</string>
    <string name="passcode_not_matches">Passcodes do not match</string>
    <string name="passcode_options">Passcode options</string>
    <string name="passcode_six_digit">6-digit code</string>
    <string name="paste">Paste</string>
    <string name="paste_address_or_dns">Paste the\u00A048-letter wallet address of the\u00A0recipient here or TON\u00A0DNS.</string>
    <string name="pending">Pending</string>
    <string name="perfect">Perfect!</string>
    <string name="please_wait_few_seconds">Please wait a\u00A0few seconds for your transaction to\u00A0be\u00A0processed…</string>
    <string name="proceed">Proceed</string>
    <string name="primary_currency">Primary currency</string>
    <string name="ready_to_go">Ready to go!</string>
    <string name="ready_to_go_subtitle">You are all set. Now you have a\u00A0wallet that only you\u00A0control — directly, without middlemen or\u00A0bankers. </string>
    <string name="receive">Receive</string>
    <string name="receive_ton">Receive TON</string>
    <string name="recent">Recent</string>
    <string name="recipient">Recipient</string>
    <string name="recipient_address">Recipient address</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="scan">Scan</string>
    <string name="secret_words">24 Secret Words</string>
    <string name="secret_words_subtitle">You can restore access to\u00A0your wallet by\u00A0entering 24 words you wrote\u00A0down when you creating the\u00A0wallet.</string>
    <string name="security">Security</string>
    <string name="see_words">See words</string>
    <string name="send">Send</string>
    <string name="send_all">Send all</string>
    <string name="send_to">Send to: %1$s %2$s</string>
    <string name="send_ton">Send TON</string>
    <string name="send_ton_to_address">Send TON to this address</string>
    <string name="send_ton_to_address_retry">Retry to send TON to this address</string>
    <string name="sender_address">Sender address</string>
    <string name="sending_ton">Sending TON</string>
    <string name="set_a_passcode">Set a Passcode</string>
    <string name="set_up_passcode">Now set\u00A0up a\u00A0passcode to\u00A0secure transactions.</string>
    <string name="share_this_address">Share this address with other TON\u00A0wallet owners to\u00A0receive TON from\u00A0them.</string>
    <string name="share_your_ton_address">Share your TON wallet address</string>
    <string name="share_wallet_address">Share Wallet Address</string>
    <string name="show_recovery_phrase">Show recovery phrase</string>
    <string name="skip">Skip</string>
    <string name="start_description">TON Wallet allows you to\u00A0make fast and\u00A0secure blockchain-based payments without\u00A0intermediaries.</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_updating">Updating…</string>
    <string name="status_waiting_network">Waiting for network…</string>
    <string name="sure_done">Sure done?</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="test_time">Test Time!</string>
    <string name="to">to</string>
    <string name="ton_connect_connect_description">Be sure to\u00A0check the\u00A0service address before\u00A0connecting the\u00A0wallet.</string>
    <string name="ton_connect_connect_wallet">Connect wallet</string>
    <string name="ton_connect_requesting_access">%1$s is\u00A0requesting access to\u00A0your wallet\u00A0address %2$s %3$s.</string>
    <string name="ton_connect_to">Connect to %1$s</string>
    <string name="ton_connect_unsupported_version">Unsupported TON Connect version: %1$d</string>
    <string name="ton_transfer">TON Transfer</string>
    <string name="toncoin_have_been_sent">%1$s Toncoin have been sent to</string>
    <string name="too_bad">Too Bad!</string>
    <string name="transaction_title">Transaction</string>
    <string name="transaction_hash_copied_to_clipboard">Transaction hash copied to clipboard</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error">Unknown error</string>
    <string name="view_in_explorer">View in explorer</string>
    <string name="view_my_wallet">View My Wallet</string>
    <string name="wallet_address_or_domain">Wallet Address or Domain</string>
    <string name="wallet_created">Wallet Created</string>
    <string name="wallet_just_imported">Your wallet has just been imported!</string>
    <string name="wallet_settings">Wallet Settings</string>
    <string name="without_secret_words">Without the\u00A0secret words you can\'t restore access to the\u00A0wallet.</string>
    <string name="write_down_words">Write down these 24 words in this exact order and keep them in a\u00A0secure place. Do\u00A0not share this list with anyone. If you lose it, you\u00A0will irrevocably lose access to\u00A0your TON account.</string>
    <string name="wrong_amount">Wrong amount</string>
    <string name="your_recovery_phrase">Your recovery phrase</string>
    <string name="your_wallet_address">Your wallet address</string>
    <string name="you_didnt_have_time">You didn\'t have enough time to\u00A0write these words down.</string>

</resources>