<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/common_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/doNotHavePhraseBackButton"
        android:contentDescription="@string/accessibility_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:scaleType="center"
        android:src="@drawable/ic_back_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <org.ton.lib.rlottie.RLottieImageView
        android:id="@+id/doNotHavePhraseAnimationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:rlottie_rawRes="@raw/lottie_too_bad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/too_bad"
        style="@style/Text.Header" />

    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/without_secret_words" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/doNotHavePhraseDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_secret_words"
        style="@style/Button.Big.Primary" />

    <TextView
        android:id="@+id/doNotHavePhraseCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="44dp"
        android:text="@string/create_new_empty_wallet"
        style="@style/Button.Big.Transparent" />

</LinearLayout>