<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/common_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/recoveryPhraseScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <org.ton.lib.rlottie.RLottieImageView
                android:id="@+id/recoveryPhraseAnimationView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:rlottie_rawRes="@raw/lottie_recovery_phrase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="24dp"
                android:text="@string/your_recovery_phrase"
                style="@style/Text.Header" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="40dp"
                android:text="@string/write_down_words" />

            <GridLayout
                android:id="@+id/recoveryPhraseGridLayout"
                android:columnCount="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:rowOrderPreserved="true" />

            <TextView
                android:id="@+id/recoveryPhraseDoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:text="@string/done"
                style="@style/Button.Big.Primary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <org.ton.wallet.uikit.view.AppToolbar
        android:id="@+id/recoveryPhraseToolbar"
        android:background="@color/common_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/your_recovery_phrase" />
    
</FrameLayout>